// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatInput matches snapshot in bottom position 1`] = `
<div>
  <div
    class="w-full transition-all duration-300 ease-out"
  >
    <div
      class="relative w-full bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20 transition-colors duration-200"
    >
      <div
        class="flex items-end"
      >
        <button
          aria-label="Attach file"
          class="p-3 text-silver/60 hover:text-silver transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-paperclip w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
            />
          </svg>
        </button>
        <input
          aria-hidden="true"
          class="hidden"
          multiple=""
          type="file"
        />
        <textarea
          class="flex-1 bg-transparent text-white placeholder:text-silver/60 py-3 pr-12 resize-none outline-none min-h-12"
          placeholder="Send a message..."
          rows="1"
          style="max-height: 200px;"
        />
        <button
          aria-label="Send message"
          class="absolute right-2 bottom-2 p-2 transition-colors duration-200 text-silver/40 cursor-not-allowed"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-send w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatInput matches snapshot in centered position 1`] = `
<div>
  <div
    class="w-full flex flex-col items-center justify-center transition-all duration-300 ease-out"
  >
    <p
      class="text-silver text-sm mb-4 text-center"
    >
      Type anything to start
    </p>
    <div
      class="relative w-full bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20 transition-colors duration-200 max-w-lg"
    >
      <div
        class="flex items-end"
      >
        <button
          aria-label="Attach file"
          class="p-3 text-silver/60 hover:text-silver transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-paperclip w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
            />
          </svg>
        </button>
        <input
          aria-hidden="true"
          class="hidden"
          multiple=""
          type="file"
        />
        <textarea
          class="flex-1 bg-transparent text-white placeholder:text-silver/60 py-3 pr-12 resize-none outline-none min-h-12"
          placeholder="Send a message..."
          rows="1"
          style="max-height: 200px;"
        />
        <button
          aria-label="Send message"
          class="absolute right-2 bottom-2 p-2 transition-colors duration-200 text-silver/40 cursor-not-allowed"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-send w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatInput matches snapshot with streaming state 1`] = `
<div>
  <div
    class="w-full transition-all duration-300 ease-out"
  >
    <div
      class="relative w-full bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20 transition-colors duration-200"
    >
      <div
        class="flex items-end"
      >
        <button
          aria-label="Attach file"
          class="p-3 text-silver/60 hover:text-silver transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-paperclip w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
            />
          </svg>
        </button>
        <input
          aria-hidden="true"
          class="hidden"
          multiple=""
          type="file"
        />
        <textarea
          class="flex-1 bg-transparent text-white placeholder:text-silver/60 py-3 pr-12 resize-none outline-none min-h-12 opacity-50 cursor-not-allowed"
          disabled=""
          placeholder="Send a message..."
          rows="1"
          style="max-height: 200px;"
        />
        <button
          aria-label="Stop generation"
          class="absolute right-2 bottom-2 p-2 text-error hover:bg-error/10 transition-colors duration-200"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-square w-5 h-5 fill-current"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
